tests/baselines/reference/globalThisAmbientModules.errors.txt
globalThisAmbientModules.ts(8,39): error TS2339: Property '"ambientModule"' does not exist on type 'typeof globalThis'.
globalThisAmbientModules.ts(11,33): error TS2339: Property '"ambientModule"' does not exist on type 'typeof globalThis'.


==== globalThisAmbientModules.ts (2 errors) ====
    declare module "ambientModule" {
        export type typ = 1
        export var val: typ
    }
    namespace valueModule { export var val = 1 }
    namespace namespaceModule { export type typ = 1 }
    // should error
    type GlobalBad1 = (typeof globalThis)["\"ambientModule\""]
                                          ~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property '"ambientModule"' does not exist on type 'typeof globalThis'.
    type GlobalOk1 = (typeof globalThis)["valueModule"]
    type GlobalOk2 = globalThis.namespaceModule.typ
    const bad1: (typeof globalThis)["\"ambientModule\""] = 'ambientModule'
                                    ~~~~~~~~~~~~~~~~~~~
!!! error TS2339: Property '"ambientModule"' does not exist on type 'typeof globalThis'.
    